# SFML_SpaceInvaderClone

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/: data.json
include/: Bullet.h  Enemy.h  EnemyBullet.h  EnemySpawner.h  Game.h  GameOverWindow.h  Gameobject.h  InputManager.h  MyText.h  ObjectPooler.h  Player.h  ProgressBar.h  ScoreLifeManager.h  ShootingEnemy.h  SpecialObject.h  TextureLoader.h  UIGameobject.h  UIManager.h  World.h
scripts/: 2_build_debug.bat  2_build_release.bat
source/: Bullet.cpp  Enemy.cpp  EnemyBullet.cpp  EnemySpawner.cpp  Game.cpp  GameObject.cpp  GameOverWindow.cpp  InputManager.cpp  MyText.cpp  Player.cpp  ProgressBar.cpp  ScoreLifeManager.cpp  ShootingEnemy.cpp  SpecialObject.cpp  TextureLoader.cpp  UIGameobject.cpp  UIManager.cpp  World.cpp
